# richip

./: Cargo.toml
src/: cli.rs  main.rs
src/input/: caddy.rs  mod.rs
src/lookup/: ipinfo.rs  mod.rs
