[package]
name = "richip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
clap = { version = "4.2.2", features = ["cargo"] }
ipinfo = "2.0.0"
jsonptr = "0.3.3"
regex = "1.7.3"
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
